# biff

./: .gitignore  CHANGELOG.md  COMPARISON.md  Cargo.toml  GUIDE.md  README.md  build.rs
.github/workflows/: ci.yml  release.yml
ci/: ubuntu-install-packages
src/: datetime.rs  extract.rs  ical.rs  logger.rs  main.rs  parallel.rs  parse.rs  round.rs  span.rs  style.rs  tag.rs  timezone.rs  weekdate.rs
src/args/: flags.rs  mod.rs  positional.rs
src/cmd/: mod.rs  untag.rs
src/cmd/span/: balance.rs  fmt.rs  iso8601.rs  mod.rs  round.rs  since.rs  until.rs
src/cmd/tag/: exec.rs  files.rs  lines.rs  mod.rs  stat.rs
src/cmd/time/: add.rs  cmp.rs  fmt.rs  inn.rs  mod.rs  of.rs  parse.rs  relative.rs  round.rs  seq.rs  sort.rs
src/cmd/tz/: compatible.rs  list.rs  mod.rs  seq.rs
src/locale/: disabled.rs  enabled.rs  mod.rs
src/snapshots/: biff__ical__tests__daily_every_20_minutes_9am_to_440pm.snap  biff__ical__tests__daily_every_day_in_january_for_three_years.snap  bttf__ical__tests__daily_until_dec24-2.snap  bttf__ical__tests__daily_until_dec24.snap  bttf__ical__tests__yearly_every_thursday_only_in_june_july_aug.snap  bttf__ical__tests__yearly_every_week_day_1998_in_some_weeks.snap  bttf__ical__tests__yearly_every_week_day_jan_feb_1998_overlap_some_weeks.snap  bttf__ical__tests__yearly_every_weekend_in_2025.snap  bttf__ical__tests__yearly_some_weeks_in_1998.snap
tests/: command.rs  lib.rs
tests/span/: balance.rs  fmt.rs  iso8601.rs  mod.rs  round.rs  since.rs
tests/tag/: files.rs  lines.rs  mod.rs
tests/time/: add.rs  cmp.rs  fmt.rs  inn.rs  mod.rs  of.rs  parse.rs  relative.rs  round.rs  seq.rs  sort.rs
tests/tz/: compatible.rs  list.rs  mod.rs  seq.rs
tests/untag/: mod.rs
